--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "11.0.1",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recharts": "^2.0.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
