--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@tailwindcss/forms": "^0.3.3",
+    "idb-keyval": "^5.0.6",
     "next": "11.0.1",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "swr": "^0.5.6",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@types/react": "^17.0.14",
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
