--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "recharts": "^2.0.9",
     "swr": "^0.5.6",
+    "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
