--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@tailwindcss/forms": "^0.3.3",
+    "firebase": "^8.8.0",
     "idb-keyval": "^5.0.6",
     "next": "11.0.1",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0",
     "recharts": "^2.0.9",
     "swr": "^0.5.6",
     "typescript": "^4.3.5",
